# R3emu

./: .gitignore  README.md  README.txt  flake.nix  makefile  meson.build  meson_win.build
src/: arithmetic.c  arithmetic.h  common.c  common.h  config.h  cores.c  cores.h  disassembler.c  disassembler.h  keyboard.c  keyboard.h  main.cpp  memory.c  memory.h  terminal.c  terminal.h
src/tests/: ALU_add.cpp  ALU_shifts.cpp  ALU_sub.cpp
tests/: buildtests.lua  colortest.asm  demo.asm  demodism.asm  pixplot.asm  test0.asm  tptasm.lua  wordle.asm
tests/compiler/: cli.lua  codegen.lua  diagnostics.lua  ir.lua  lexer.lua  message.lua  node.lua  parser.lua  symbol_table.lua  type.lua  type_checker.lua  util.lua  wordle.c
